AddIns/Neo.AddIn.GTS/Api.cs


        [DllImport(DLL)]
        public static extern short GT_PvtTable(Card card, short tableId, int count, ref double pTime, ref double pPos, ref double pVel);
        [DllImport(DLL)]
        public static extern short GT_PvtTableEx(Card card, short tableId, int count, ref double pTime, ref double pPos, ref double pVelBegin, ref double pVelEnd);
        [DllImport(DLL)]
        public static extern short GT_PvtTableComplete(Card card, short tableId, int count, ref double pTime, ref double pPos, ref double pA, ref double pB, ref double pC, double velBegin, double velEnd);
        [DllImport(DLL)]
        public static extern short GT_PvtTablePercent(Card card, short tableId, int count, ref double pTime, ref double pPos, ref double pPercent, double velBegin);
        [DllImport(DLL)]
        public static extern short GT_PvtPercentCalculate(Card card, int n, ref double pTime, ref double pPos, ref double pPercent, double velBegin, ref double pVel);
        [DllImport(DLL)]
        public static extern short GT_PvtTableContinuous(Card card, short tableId, int count, ref double pPos, ref double pVel, ref double pPercent, ref double pVelMax, ref double pAcc, ref double pDec, double timeBegin);
        [DllImport(DLL)]
        public static extern short GT_PvtContinuousCalculate(Card card, int n, ref double pPos, ref double pVel, ref double pPercent, ref double pVelMax, ref double pAcc, ref double pDec, ref double pTime);

        [DllImport(DLL)]
        public static extern short GT_HomeInit(Card card);
        [DllImport(DLL)]
        public static extern short GT_Home(Card card, Axis axis, int pos, double vel, double acc, int offset);
        [DllImport(DLL)]
        public static extern short GT_Index(Card card, Axis axis, int pos, int offset);
        [DllImport(DLL)]
        public static extern short GT_HomeStop(Card card, Axis axis, int pos, double vel, double acc);
        [DllImport(DLL)]
        public static extern short GT_HomeSts(Card card, Axis axis, out ushort pStatus);

        [DllImport(DLL)]
        public static extern short GT_HandwheelInit(Card card);
        [DllImport(DLL)]
        public static extern short GT_SetHandwheelStopDec(Card card, short slave, double decSmoothStop, double decAbruptStop);
        [DllImport(DLL)]
        public static extern short GT_StartHandwheel(Card card, short slave, short master, short masterEven, short slaveEven, short intervalTime, double acc, double dec, double vel, short stopWaitTime);
        [DllImport(DLL)]
        public static extern short GT_EndHandwheel(Card card, short slave);

        [DllImport(DLL)]
        public static extern short GT_SetTrigger(Card card, short i, ref TTrigger pTrigger);
        [DllImport(DLL)]
        public static extern short GT_GetTrigger(Card card, short i, out TTrigger pTrigger);
        [DllImport(DLL)]
        public static extern short GT_GetTriggerStatus(Card card, short i, out TTriggerStatus pTriggerStatus, short count);
        [DllImport(DLL)]
        public static extern short GT_ClearTriggerStatus(Card card, short i);

        [DllImport(DLL)]
        public static extern short GT_SetComparePort(Card card, short channel, short hsio0, short hsio1);

        [DllImport(DLL)]
        public static extern short GT_ComparePulse(Card card, short level, short outputType, short time);
        [DllImport(DLL)]
        public static extern short GT_CompareStop(Card card);
        [DllImport(DLL)]
        public static extern short GT_CompareStatus(Card card, out short pStatus, out int pCount);
        [DllImport(DLL)]
        public static extern short GT_CompareData(Card card, short encoder, short source, short pulseType, short startLevel, short time, ref int pBuf1, short count1, ref int pBuf2, short count2);
        [DllImport(DLL)]
        public static extern short GT_CompareLinear(Card card, short encoder, short channel, int startPos, int repeatTimes, int interval, short time, short source);

        [DllImport(DLL)]
        public static extern short GT_SetEncResponseCheck(Card card, short control, short dacThreshold, double minEncVel, int time);
        [DllImport(DLL)]
        public static extern short GT_GetEncResponseCheck(Card card, short control, out short pDacThreshold, out double pMinEncVel, out int pTime);
        [DllImport(DLL)]
        public static extern short GT_EnableEncResponseCheck(Card card, short control);
        [DllImport(DLL)]
        public static extern short GT_DisableEncResponseCheck(Card card, short control);

        [DllImport(DLL)]
        public static extern short GT_2DCompareMode(Card card, short chn, short mode);
        [DllImport(DLL)]
        public static extern short GT_2DComparePulse(Card card, short chn, short level, short outputType, short time);
        [DllImport(DLL)]
        public static extern short GT_2DCompareStop(Card card, short chn);
        [DllImport(DLL)]
        public static extern short GT_2DCompareClear(Card card, short chn);
        [DllImport(DLL)]
        public static extern short GT_2DCompareStatus(Card card, short chn, out short pStatus, out int pCount, out short pFifo, out short pFifoCount, out short pBufCount);
        [DllImport(DLL)]
        public static extern short GT_2DCompareSetPrm(Card card, short chn, ref T2DComparePrm pPrm);
        [DllImport(DLL)]
        public static extern short GT_2DCompareData(Card card, short chn, short count, ref T2DCompareData pBuf, short fifo);
        [DllImport(DLL)]
        public static extern short GT_2DCompareStart(Card card, short chn);

        [DllImport(DLL)]
        public static extern short GT_SetAxisMode(Card card, Axis axis, short mode);
        [DllImport(DLL)]
        public static extern short GT_GetAxisMode(Card card, Axis axis, out short pMode);
        [DllImport(DLL)]
        public static extern short GT_SetHSIOOpt(Card card, ushort value, short channel);
        [DllImport(DLL)]
        public static extern short GT_GetHSIOOpt(Card card, out ushort pValue, short channel);
        [DllImport(DLL)]
        public static extern short GT_LaserPowerMode(Card card, short laserPowerMode, double maxValue, double minValue, short channel, short delaymode);
        [DllImport(DLL)]
        public static extern short GT_LaserPrfCmd(Card card, double outputCmd, short channel);
        [DllImport(DLL)]
        public static extern short GT_LaserOutFrq(Card card, double outFrq, short channel);
        [DllImport(DLL)]
        public static extern short GT_SetPulseWidth(Card card, uint width, short channel);
        [DllImport(DLL)]
        public static extern short GT_SetWaitPulse(Card card, ushort mode, double waitPulseFrq, double waitPulseDuty, short channel);
        [DllImport(DLL)]
        public static extern short GT_SetPreVltg(Card card, ushort mode, double voltageValue, short channel);
        [DllImport(DLL)]
        public static extern short GT_SetLevelDelay(Card card, ushort offDelay, ushort onDelay, short channel);
        [DllImport(DLL)]
        public static extern short GT_EnaFPK(Card card, ushort time1, ushort time2, ushort laserOffDelay, short channel);
        [DllImport(DLL)]
        public static extern short GT_DisFPK(Card card, short channel);
        [DllImport(DLL)]
        public static extern short GT_SetLaserDisMode(Card card, short mode, short source, ref int pPos, ref double pScale, short channel);
        [DllImport(DLL)]
        public static extern short GT_SetLaserDisRatio(Card card, ref double pRatio, double minPower, double maxPower, short channel);
        [DllImport(DLL)]
        public static extern short GT_SetWaitPulseEx(Card card, ushort mode, double waitPulseFrq, double waitPulseDuty);
        [DllImport(DLL)]
        public static extern short GT_SetLaserMode(Card card, short mode);
    }
}
